// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PauseIcon with all props it renders correctly 1`] = `
<svg
  className="css-1hgjwxk"
  color="#fff"
  height="3em"
  viewBox="0 0 24 24"
  width="3em"
>
  <path
    d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;

exports[`PauseIcon without props it renders correctly 1`] = `
<svg
  className="css-189tqkb"
  color="#fff"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</svg>
`;
